added functions to route/recipes. add jsonify and commented out

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -74,7 +74,7 @@
             </nav>
             <div class="center">
                 <h1 class="header"> RECIPEASY.</h1>
-                <p>Food made simple.</p>
+                <p>Food made simple. test {{recipe_name}}</p>
             </div>
         </div>
     </section>
@@ -96,9 +96,10 @@
                     </div>
                     <div class="col">
                         <div>
-                        <h1> SOMETHING ABOUT FOOD STORIES</h1>
-                        <P> SOME MORE CONTENT TO GO HERE</P>
-                            <a class="pinklink" href="">Learn</a>
+                        <h1> Need some inspiration?</h1>
+                        <P> Collections has a range of delicious recipes for all occasions from lazy brunch
+                            to dinner parties or quick and healthy meals for the family </P>
+                            <a class="pinklink" href="">Visit Collections</a>
                     </div>
                 </div>
             </div>
@@ -109,7 +110,7 @@
             <div class="center">
                 <div class="row">
                     <div class="col">
-                        <h2> SOMETHING ABOUT RECIPES</h2>
+                        <h2> SOMETHING ABOUT FoodStories</h2>
                         <P class="pgreen"> SOME MORE CONTENT TO GO HERE</P>
                         <a class="greenlink" href="/recipes">Learn</a>
                     </div>
