--- a/application/templates/signup.html
+++ b/application/templates/signup.html
@@ -18,6 +18,7 @@
                     {{form.user_name(size=30)}}
                 </p>
                 <p> {{form.submit()}}</p>
+                <p> {{message}}</p>
             </form>
         </div>
     </div>
