added dictionaries for collections

--- a/application/templates/recipes.html
+++ b/application/templates/recipes.html
@@ -83,7 +83,7 @@
     <section class="two">
         <div class="container">
             <div class="center">
-                <h1> {{recipe_name}}</h1>
+                <h1> {{recipe1['recipe_name']}}</h1>
                 <P> {{recipe_description}}?</P>
                 <p>
                     <a class="pinklink" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
