--- a/application/templates/recipes.html
+++ b/application/templates/recipes.html
@@ -83,8 +83,8 @@
     <section class="two">
         <div class="container">
             <div class="center">
-                <h1> {{recipe1['recipe_name']}}</h1>
-                <P> {{recipe_description}}?</P>
+                <h1> {{recipe1.recipe_name}}</h1>
+                <P> {{recipe1.recipe_description}}</P>
                 <p>
                     <a class="pinklink" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
                       View Image
