--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -74,7 +74,7 @@
             </nav>
             <div class="center">
                 <h1 class="header"> RECIPEASY.</h1>
-                <p>Food made simple. test {{recipe_name}}</p>
+                <p>Food made simple.</p>
             </div>
         </div>
     </section>
