search func and templates up to date

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -41,28 +41,18 @@
                         </a>
                     </a>
                     <a class="nav-item">
-                        <a class="nav-link" href="/recipes">
-                            <p class="pnav">Recipes</p>
+                        <a class="nav-link" href="/collectionsMenu">
+                            <p class="pnav">Search by collection</p>
                         </a>
                     </a>
                     <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Food Stories</p>
+                        <a class="nav-link" href="/searchNutrition">
+                            <p class="pnav">Search by ingredient</p>
                         </a>
                     </a>
                     <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Carbon Footprint</p>
-                        </a>
-                    </a>
-                    <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Search Foods</p>
-                        </a>
-                    </a>
-                    <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Submit your own</p>
+                        <a class="nav-link" href="/search">
+                            <p class="pnav">Search by food group</p>
                         </a>
                     </a>
                     <a class="nav-item">
@@ -96,10 +86,9 @@
                     </div>
                     <div class="col">
                         <div>
-                        <h1> Need some inspiration?</h1>
-                        <P> Collections has a range of delicious recipes for all occasions from lazy brunch
-                            to dinner parties or quick and healthy meals for the family </P>
-                            <a class="pinklink" href="">Visit Collections</a>
+                        <h1> FUN FACTS ABOUT YOUR FOOD</h1>
+                        <P> Search food groups to find facts and recipes! </P>
+                            <a class="pinklink" href="/search">Learn</a>
                     </div>
                 </div>
             </div>
@@ -110,9 +99,9 @@
             <div class="center">
                 <div class="row">
                     <div class="col">
-                        <h2> SOMETHING ABOUT FoodStories</h2>
-                        <P class="pgreen"> SOME MORE CONTENT TO GO HERE</P>
-                        <a class="greenlink" href="/recipes">Learn</a>
+                        <h2> SEARCH RECIPES FOR EVERY OCCASION</h2>
+                        <P class="pgreen"> Quick search recipes - food for every mood</P>
+                        <a class="greenlink" href="/collectionsMenu">Learn</a>
                     </div>
                     <div class="col">
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -147,9 +136,9 @@
                         </div>
                     </div>
                     <div class="col">
-                        <h1> SOMETHING ABOUT THE ENVIRONMENT</h1>
-                        <P> SOME MORE CONTENT TO GO HERE</P>
-                        <a class="link" href="/recipes">Learn</a>
+                        <h1> NUTRITIONAL INFORMATION AND ENVIRONMENT IMPACT</h1>
+                        <P> Health concious and care for the planet?</P>
+                        <a class="link" href="/searchNutrition">Learn</a>
                     </div>
                 </div>
             </div>
