--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -33,7 +33,7 @@
 
     <section class="head1">
         <div class="container">
-                        <nav class="navbar">
+            <nav class="navbar">
                 <div class="container-fluid">
                     <a class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/home">
@@ -41,28 +41,18 @@
                         </a>
                     </a>
                     <a class="nav-item">
-                        <a class="nav-link" href="/recipes">
-                            <p class="pnav">Recipes</p>
+                        <a class="nav-link" href="/collectionsMenu">
+                            <p class="pnav">Search by collection</p>
                         </a>
                     </a>
                     <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Food Stories</p>
+                        <a class="nav-link" href="/searchNutrition">
+                            <p class="pnav">Search by ingredient</p>
                         </a>
                     </a>
                     <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Carbon Footprint</p>
-                        </a>
-                    </a>
-                    <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Search Foods</p>
-                        </a>
-                    </a>
-                    <a class="nav-item">
-                        <a class="nav-link" href="#">
-                            <p class="pnav">Submit your own</p>
+                        <a class="nav-link" href="/search">
+                            <p class="pnav">Search by food group</p>
                         </a>
                     </a>
                     <a class="nav-item">
