--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -47,23 +47,18 @@
                     </a>
                     <a class="nav-item">
                         <a class="nav-link" href="/searchNutrition">
-                            <p class="pnav">Search by ingredient</p>
+                            <p class="pnav">Search nutrition and environmental impact</p>
                         </a>
                     </a>
                     <a class="nav-item">
                         <a class="nav-link" href="/search">
-                            <p class="pnav">Search by food group</p>
-                        </a>
-                    </a>
-                    <a class="nav-item">
-                        <a class="nav-link" href="/signup">
-                            <p class="pnav">Favourites</p>
+                            <p class="pnav">Search fun facts</p>
                         </a>
                     </a>
                 </div>
             </nav>
             <div class="center">
-                <h1 class="header"> RECIPEASY.</h1>
+                <a class="header" href="/home"> RECIPEASY.</a>
                 <p>Food made simple.</p>
             </div>
         </div>
