--- a/application/templates/collections.html
+++ b/application/templates/collections.html
@@ -5,7 +5,7 @@
         <div class="center">
                     {% for recipe in recipes %}
         <br>
-        <a class="pinklink" style="font-size: 1.6vw;" href="/recipe/{{recipe.recipe_id}}"><h1>{{recipe.recipe_name}}</h1></a>
+        <a class="h1hover" href="/recipe/{{recipe.recipe_id}}">{{recipe.recipe_name}}</a>
             <br>
             <p>{{recipe.recipe_description}}</p>
         <br>
