--- a/application/templates/collectionsMenu.html
+++ b/application/templates/collectionsMenu.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 <section class="four">
-    <div class="container" style="width:80% ; height:100%;" >
-    <div class="centre" >
-        <BR>
+    <div class="container" style="width:80% ; height:100vh;" >
+    <div class="center" >
+
+        <br>
         {% for collection in collections %}
         <a class="collectionlink" href="/collections/{{collection.collection_id}}">{{collection.collection_name}}</a>
         <br>
-        <BR>
+        <br>
+
         {% endfor %}
     </div>
     </div>
