--- a/application/templates/search.html
+++ b/application/templates/search.html
@@ -3,7 +3,9 @@
 <section class="two">
     <div class="container">
         <div class="center">
-            <h2> Sign Up </h2>
+            <br>
+            <br>
+            <h1> SEARCH FOR FUN FACTS BY ENTERING A FOOD GROUP</h1>
             <form action="" method="post">
                 <p>
                     {{form.search.label}} <br>
